# git-search-command

./: .gitignore  .mdlrc  .pre-commit-config.yaml  .pylintrc  LICENSE  README.md  git_search.py  gitlab_search.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  todos.md
.github/: FUNDING.yml  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  chore_template.md  feature_template.md
.github/workflows/: code_clean.yml  code_quality.yml  publish_to_pypi.yml  push_pull_request.yml  test.yml
scripts/: detect_private_value.py  validate_python_file_name.py
src/git_search/: __init__.py  __main__.py
src/git_search/api/: gitlab_api.py
src/git_search/base/: base_repository.py
src/git_search/constant/: const.py  env.py
src/git_search/gitlab/: gitlab_command.py  gitlab_repository.py
src/gsc/: __init__.py  __main__.py  config.py  constants.py  settings.py  utils.py
src/gsc/command_line/: __init__.py  cli.py  env_cli.py  github_cli.py  gitlab_cli.py  print_observer.py
src/gsc/command_line/observer/: base_observer.py  gitlab_observer.py
src/gsc/core/: rate_limit.py  request_decorator.py  request_wrapper.py  rx_task.py
src/gsc/data/api/: gitlab_api.py
src/gsc/data/repository/: base_repository.py  github_repo_repository.py  github_repository.py  github_search_repository.py  gitlab_project_repository.py  gitlab_repository.py  gitlab_search_repository.py
src/gsc/data/request/: github_request.py  gitlab_request.py  request_wrapper.py
src/gsc/data/response/: file_name.py  github_response.py  gitlab_response.py  project.py  search_result.py
src/gsc/di/: application_container.py  github_container.py  gitlab_container.py
src/gsc/domain/entities/: github_model.py  gitlab_model.py
src/gsc/domain/use_cases/: github_search_use_case.py  gitlab_search_use_case.py
src/gsc/entities/: base.py  base_model.py  github_model.py  gitlab_model.py
src/gsc/observer/: base_observer.py  github_observer.py  gitlab_observer.py  plugin.py
src/gsc/presentation/command_line/: __init__.py  cli.py  env_cli.py  github_cli.py  gitlab_cli.py
src/gsc/presentation/observer/: base_observer.py  github_observer.py  gitlab_observer.py  plugin.py
src/gsc/request/: request_wrapper.py  rx_task.py
src/gsc/use_cases/: base_use_case.py  github_search_multi_repo_use_case.py  github_search_repo_use_case.py  github_search_use_case.py  gitlab_search_group_use_case.py  gitlab_search_proj_use_case.py  gitlab_search_use_case.py
src/gsc/utils/: json.py
src/tests/base/: test_base_repository.py
src/tests/mock_json/: response_failed_404.json  response_success.json
tests/: test_config.py  test_utils.py
tests/presentation/: test_cli.py  test_github_cli.py  test_gitlab_cli.py
