[tool.poetry]
name = "git-search-command"
version = "0.0.0"
description = "A simple tool to search the expression in the project scope for GitLab and GitHub repositories."
authors = ["jamesnguyen46 <thachnguyen1989@gmail.com>"]
maintainers = ["jamesnguyen46 <thachnguyen1989@gmail.com>"]
repository = "https://github.com/jamesnguyen46/git-search-command"
documentation = "https://github.com/jamesnguyen46/git-search-command/wiki"
packages = [
    { include = "gsc", from = "src" }
]
license = "Apache-2.0"
readme = "README.md"
keywords = ["gitlab", "search", "command line", "python", "git", "github"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3 :: Only"
]

[tool.poetry.urls]
"Bug Reports" = "https://github.com/jamesnguyen46/git-search-command/issues"

[tool.poetry.dependencies]
python = "^3.9"
requests = ">=2.26.0"
rx = ">=3.2.0"
click = ">=8.0.3"
python-dotenv = ">=0.19.2"
jsonpickle = ">=2.1.0"
dependency-injector = ">=4.0,<5.0"

[tool.poetry.dev-dependencies]
pre-commit = ">=2.16.0"

[tool.poetry.scripts]
gsc = 'gsc:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
